--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "quasar": "^1.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
