--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.9",
     "quasar": "^1.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
