--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "firebase": "^8.2.9",
+    "moment": "^2.29.1",
     "quasar": "^1.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
