--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.2.9",
     "geofire-common": "^5.2.0",
+    "lottie-web": "^5.7.8",
     "moment": "^2.29.1",
     "quasar": "^1.0.0",
     "register-service-worker": "^1.7.1",
